--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -9,25 +9,30 @@
 <body>
     <nav>
         <img src="./img/logo.png" alt="ux-atlantic-logo">
-        <ul>
-          <li>
-            <img src="./img/home-icon.png" alt="home-icon">
-            <p>Home</p>
-          </li>
-          <li>
-            <img src="./img/deal-icon.png" alt="deal-icon">
-            <p> Travel Deals</p>
-          </li>     
-          <li>
-            <img src="./img/schedule-icon.png" alt="schedule-icon">
-            <p>Flight Schedule</p>
-          </li>
-          <li>
-            <img src="./img/login-icon.png" alt="login-icon">
-            <p> Register/login</p>
-          </li>
-        </ul>
+        <div class='navBar'>
+          <div class='divider'>
+           <div> <img src="./img/home-icon.png" alt="home-icon"> </div>
+           <div> <p>Home</p> </div>
+          </div>
+          <div class='divider'>
+           <div> <img src="./img/deal-icon.png" alt="deal-icon"></div>
+            <div> <p> Travel Deals</p></div>
+          </div>     
+          <div class='divider'>
+            <div><img src="./img/schedule-icon.png" alt="schedule-icon"></div>
+            <div><p>Flight Schedule</p></div>
+          </div>
+          <div class='divider'>
+            <div><img src="./img/login-icon.png" alt="login-icon"></div>
+            <div><p> Register/login</p></div>
+          </div>
+        </div>
     </nav>
     
 </body>
 </html>
+<body> 
+  <div> 
+
+  </div>
+</body>
