--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -40,7 +40,19 @@
       <img class="toprowright" img src="../airplane/img/car-icon.png">
       </div>
     </div>
-    <section></section>
+    <section>
+      <textarea id="depart" name="Depart" placeholder="depart"></textarea>
+      <!-- <textarea id="date" name="date" placeholder="mm/dd/yyyy">mm/dd/yyyy </textarea> -->
+      <textarea id="date" name="date" placeholder="DATE">mm/dd/yyyy</textarea>
+      <label for="transmission">Passengers</label>
+      <select id="transmission" name="transmission">
+        <option selected>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+      </select>
+
+    </section>
     <section></section>
     <article></article>
   </main>
