--- a/02week/sites/index.html
+++ b/02week/sites/index.html
@@ -21,7 +21,18 @@
   </ul>
 </nav>
 
-<header class="border-red">header</header>
+<header class="border-red">
+  <!-- <section class="border-blue firstSection"> section1</section>
+  <section class="border-blue secondSection"> section2</section>
+  <section class="border-blue thridSection"> section3</section> -->
+  <div class="header_title">
+    <div class="parent_h1">
+      <h1 class="border-green">The Mars Coffee Shop</h1>
+    </div>
+     <h6 class="border-pink">Out of this world cup of joe </h6>
+  </div>
+
+</header>
 
   <section class="border-red">section1</section>
   <section class="border-red">section2</section>
