added a comment about checkbox in airplane

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -60,7 +60,15 @@
       <input class="radioBttn" type="radio" checked="true">Return
       <input class="radioBttn" type="radio">One Way
     </div>
+
+    <!-- ossia: change the type from "radio" to "checkbox"
+    <div class="radio">
+      <input class="radioBttn" type="checkbox" checked="true">Return
+      <input class="radioBttn" type="checkbox">One Way
+    </div> -->
   </div>
+
+ 
 
     <div class="searchBttn">
       <a class="flightSearch" href="/">Search Flights</a>
