--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -3,8 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Airplane</title>
 </head>
 
@@ -45,8 +45,8 @@
     </div>
   
     <div class="boxes">
-      <input class="txtBox" type="text" placeholder="mm/dd/yyyy">
-      <input class="txtBox" type="text" placeholder="mm/dd/yyyy">
+      <input class="dateBox" type="date">
+      <input class="dateBox" type="date">
       </div>
     </div>
 
