I know its not perfect but I'm trying to recreate the form with out cheating and looking at what we did Thursday

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -30,6 +30,9 @@
       </ul>
     </nav>
   </header>
+      <div class="containter">
+
+      </div>
   <main>
     <div class="toprow">
       <div class="toprowleft">
@@ -41,20 +44,61 @@
       </div>
     </div>
     <section>
-      <textarea id="depart" name="Depart" placeholder="depart"></textarea>
-      <!-- <textarea id="date" name="date" placeholder="mm/dd/yyyy">mm/dd/yyyy </textarea> -->
-      <textarea id="date" name="date" placeholder="DATE">mm/dd/yyyy</textarea>
+    <div class="left">
+      <p>
+        <textarea id="depart" name="Depart" placeholder="Depart" rows="3" cols="30"></textarea>
+      </p>
+      <p>
+      <textarea id="depart" name="Depart" placeholder="mm/dd/yyyy" rows="3" cols="30"></textarea>
+      </p>
+        <!-- <textarea id="date" name="date" placeholder="DATE">mm/dd/yyyy</textarea>
       <label for="transmission">Passengers</label>
-      <select id="transmission" name="transmission">
-        <option selected>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-      </select>
-
+      </p> -->
+      <p>
+        <div id="passenger">
+          Passengers
+        <select id="passenger">
+          <option selected>0</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+        </select>
+        </div>
+      </p>
+      </div>
     </section>
-    <section></section>
-    <article></article>
-  </main>
+   
+    <section>
+        <div class="left">
+            <p>
+              <textarea id="depart" name="Depart" placeholder="Arrive" rows="3" cols="30"></textarea>
+            </p>
+            <p>
+            <textarea id="depart" name="Depart" placeholder="mm/dd/yyyy" rows="3" cols="30"></textarea>
+            </p>
+              <!-- <textarea id="date" name="date" placeholder="DATE">mm/dd/yyyy</textarea>
+            <label for="transmission">Passengers</label>
+            </p> -->
+            <p>
+              <div id="passenger">
+                Passengers
+              <select id="passenger">
+                <option selected>0</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+              </select>
+              </div>
+            </p>
+      
+    </section>
+    <article>
+      <div id="button">
+      <button type="submit">Search Flights</button>
+      </div>
+    </article>
+  </main> 
 </body>
 </html>
