took off the borders and deleted a section so my button div is just solitaire in the main

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -90,11 +90,11 @@
             </p>
       
     </section>
-    <section class="button">
+    <!-- < class="button"> -->
       <div id="button">
       <button type="submit">Search Flights</button>
       </div>
-    </section>
+    <!-- </section> -->
   </main> 
 </body>
 </html>
