made the drop down the right color

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -56,7 +56,7 @@
       </p> -->
       <p>
         <div id="passenger">
-          Passengers
+          <p class="passengers">Passengers</p> 
         <select id="passenger">
           <!-- <option selected>0</option> -->
           <option selected >1</option>
@@ -83,8 +83,8 @@
             <p>
               <div id="radio">
                 <label>
-                  <input type="radio" name="radio" value="roundtrip">Round Trip
-                  <input type="radio" name="radio" value="oneway"> One Way
+                  <input type="radio" name="radio" value="roundtrip">  Round Trip
+                  <input type="radio" name="radio" value="oneway">  One Way
                 </label>
               </div>
             </p>
