--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -5,10 +5,10 @@
 <h1>Shopping Cart</h1>
 
 <ul>
-  <li id="li_1">All-New Fire 7 Tablet</li>
-  <li id="li_2">Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms</li>
-  <li id="li_3">Amazon Echo</li>
-  <li id="li_4">Coleman Lay Z Spa Inflatable Hot Tub</li>
+  <li>All-New Fire 7 Tablet</li>
+  <li>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms</li>
+  <li>Amazon Echo</li>
+  <li>Coleman Lay Z Spa Inflatable Hot Tub</li>
 </ul>
 
 <div id="div">
