--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -16,14 +16,14 @@
     <h1>Shopping Cart</h1>
 
     <ul id="cart">
-        <li>All-New Fire 7 Tablet <span class="delete">&times;</span></li>
-        <li>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms <span class="delete">&times;</span></li>
-        <li>Amazon Echo <span class="delete">&times;</span></li>
-        <li>Coleman Lay Z Spa Inflatable Hot Tub <span class="delete">&times;</span></li>
+        <li>All-New Fire 7 Tablet <span>&times;</span></li>
+        <li>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms <span>&times;</span></li>
+        <li>Amazon Echo <span>&times;</span></li>
+        <li>Coleman Lay Z Spa Inflatable Hot Tub <span>&times;</span></li>
     </ul>
 
     <input type="text" id='addToCart' placeholder='Add items to cart'>
-    <button type='button' id='add'>+</button>
+    <button type='button' id='add'>Add</button>
     <button type='button' id='clear'>Clear</button>
 
     <div id="div">
