starting blenders eyewear

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,78 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Blenders Eyewear</title>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+  <header>
+    <div id="top">
+      <nav class="black">
+        <p class="black">SPEND $100+ GET A FREE PAIR</p>
+      </nav>
+      <nav class="white">
+        <P class="white">1-858-999-7782</P>
+        <article>
+          <div class="select">
+            <select name="currency" id="currency">
+              <option select value="USD">USD</option>
+              <option value="cad">CAD</option>
+              <option value="AUD">AUD</option>
+              <option value="EUR">EUR</option>
+              <option value="GBP">GBP</option>
+              <option value="JPY">JPY</option>
+            </select>
+          </div>
+        </article>
+      </nav>
+      <nav class="search"></nav>
+    </div>
+    </header>
+  <main>
+    <section>
+    <div id="pictures">
+      <div class="men"></div>
+      <div class="woman"></div>
+      <div class="snowgoggles"></div>
+    </div>
+    </section>
+    <section>
+    <div id="shopnow">
+      <div class="shopnow"></div>
+    </div>
+    </section>
+    <section>
+    <div id="pictures2">
+      <div class="sale"></div>
+      <div class="pouches"></div>
+    </div>
+    </section>
+    <section>
+      <div id="instagram">
+        <div class="quote"></div>
+        <div class="instagram"></div>
+      </div>
+    </section>
+    <section>
+      <div id="pictures3">
+        <div class="column1"></div>
+        <div class="column2"></div>
+        <div class="column3"></div>
+        <div class="column4"></div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div id="footer">
+      <div class="column1-shop"></div>
+      <div class="column2-company"></div>
+      <div class="column3-support"></div>
+      <div class="column4-sayhi"></div>
+    </div>
+  </footer>
 
+  
+</body>
+</html>
