airplane assignment-almost finished

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -28,11 +28,47 @@
           </div>
         </div>
     </nav>
-    
+    <div class="container">
+      <div class='airline__container'>
+        <div class="airplanecontainer__row row1">
+          <div class="icon__col col1">
+            <img src="./img/plane-icon.png" alt="plane-icon">
+          </div>
+          <div class="icon__col">
+            <img src="./img/hotel-icon.png" alt="hotel-icon">
+          </div>
+          <div class="icon__col">
+            <img src="./img/car-icon.png" alt="car-icon">
+          </div>
+        </div>
+        <div class="airplanecontainer__row row2">
+          <div class="imput__row item1">
+            <input type="text" placeholder="Depart" name="depart">
+            <input type="text" placeholder="Arrive">
+          </div>
+          <div class="imput__row item2">
+              <input type="date" placeholder="mm/dd/yyyy" name="depart">
+              <input type="date" placeholder="mm/dd/yyyy">
+          </div>
+          <div class="imput__row item3">
+              <label for="passangers">Passangers</label>
+              <input type="number" min="1" max="10" value="1">
+              <div class="checkbox__div">
+                <span>
+                  <input type="checkbox">
+                  <label for="Return">Return</label>
+                </span>
+                <span>
+                  <input type="checkbox">
+                  <label for="One Way">One Way</label>
+                </span>
+              </div>
+          </div>
+        </div>
+        <div class="airplanecontainer__row row3">
+          <button>Search Flights</button>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
-<body> 
-  <div> 
-
-  </div>
-</body>
