--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Blenders Eyewear</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
   <header>
@@ -15,8 +16,9 @@
       <nav class="white">
         <P class="white">1-858-999-7782</P>
         <article>
-          <div class="select">
-            <select name="currency" id="currency">
+          <div class="dropdown">
+            <div class="dropdown-content">
+            <select class="fa fa-angle-down" aria-hidden="true"name="currency" id="currency">
               <option select value="USD">USD</option>
               <option value="cad">CAD</option>
               <option value="AUD">AUD</option>
@@ -24,6 +26,7 @@
               <option value="GBP">GBP</option>
               <option value="JPY">JPY</option>
             </select>
+            </div>
           </div>
         </article>
       </nav>
