got delete working to remove li items, can't figure out how to simultaneously remove p items using this method

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -16,10 +16,10 @@
     <h1>Shopping Cart</h1>
 
     <ul id="cart">
-        <li>All-New Fire 7 Tablet <span>&times;</span></li>
-        <li>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms <span>&times;</span></li>
-        <li>Amazon Echo <span>&times;</span></li>
-        <li>Coleman Lay Z Spa Inflatable Hot Tub <span>&times;</span></li>
+        <li>All-New Fire 7 Tablet <span class="delete">&times;</span></li>
+        <li>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms <span class="delete">&times;</span></li>
+        <li>Amazon Echo <span class="delete">&times;</span></li>
+        <li>Coleman Lay Z Spa Inflatable Hot Tub <span class="delete">&times;</span></li>
     </ul>
 
     <input type="text" id='addToCart' placeholder='Add items to cart'>
