--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-<header>
   <nav> 
       <div>
      <img src="./img/logo.png" alt="ux-atlantic-logo">
@@ -18,7 +17,89 @@
       <a href="#">Register</a>
     </div>
   </nav>
-  </header>
+
+  <div class="container">
+    <div class="airline_container">
+      <div class="airline__container--row row1">
+        <div class="icon_col col1">
+          <img src="./img/plane-icon.png" alt="plane-icon">
+        </div>
+        <div class="icon_col">
+            <img src="./img/hotel-icon.png" alt="hotel-icon">
+        </div>
+        <div class="icon_col">
+          <img src="./img/car-icon.png" alt="car-icon">
+        </div>
+      </div>
+     
+      <div class="airline__container--row row2">
+       <div class="input__row item1">
+         <input type="text" placeholder="Depart" name="Depart">
+         <input type="text" placeholder="Arrive" name="Arrive">
+       </div>
+   
+   
+       <div class="input__row item2">
+          <input type="date" placeholder="mm/dd/yyyy" name="Depart">
+          <input type="date" placeholder="mm/dd/yyyy" name="Arrive">
+       </div>
+
+
+       <div class="input__row item3">
+         <label for="passegers">passegers</label>
+          <input type="number" min="1" max="10" value="1">
+          <div class="checkbox__div">
+              <span>
+                  <input type="checkbox__div">
+                  <label for="return">Return</label>
+                  </span>
+                  <span>
+                      <input type="checkbox__div">
+                      <label for="One Way">One Way</label>
+                      </span>
+          </div>
+       
+        </div>
+       </div>
+       <div class="airline__container--row row3">
+          <button>Search Flights</button>
+        </div>
+      </div>
+      </div>
+      </div>
+
+ 
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- </header>
   <main>
 
           <div class="box">
@@ -120,8 +201,4 @@
         <p>Register/Login</p>
       </li>
     </ul> -->
-  
-</header>
-
-</body>
-</html>
+   <!-- --> -->
