--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,62 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="../checkpoint-one/css/style.css">
+  <title>Ballogy</title>
+</head>
+<body>
+<main class="border_box1">
+  <div> 
+    <img class="logo" src="../checkpoint-one/images/Ballogy-final-05.png" height="250px" alt="logo">
+  </div>
+</main>
+<div class="container1">
+  <section class="headline"> 
+   <div> 
+     <h1>ELEVATE YOUR GAME</h1>
+  </div>
+  <div> 
+      <P>Revolutionizing the way youth and 
+       amateur athletes prepare for their sports.</P>
+       <div class="app-store"> <img src="../checkpoint-one/images/Google-Play-and-Apple-App-Store-Logos-Two-Up.png" alt="app-store"> </div>
+     </div>
+    </section>
+    <div>
+        <img class="phones" src="../checkpoint-one/images/phones.png" height="140%" alt="phones">
+      </div>
+</div>
 
+<div class="containter2">
+ <section class="what-we-do">
+  <article class="Get-Connected">
+   <h2>Get Connected</h2>
+   <p>Get the attention of coaches, schools, and other 
+     athletes around the world as you build your athletic 
+     profile and share your success.</p>
+ </article>
+ <article class="Get-Connected">
+    <h2>Get Connected</h2>
+    <p>Get the attention of coaches, schools, and other 
+      athletes around the world as you build your athletic 
+      profile and share your success.</p>
+  </article>
+  <article class="Get-Connected">
+      <h2>Get Connected</h2>
+      <p>Get the attention of coaches, schools, and other 
+        athletes around the world as you build your athletic 
+        profile and share your success.</p>
+    </article>
+    <article class="Get-Connected">
+        <h2>Get Connected</h2>
+        <p>Get the attention of coaches, schools, and other 
+          athletes around the world as you build your athletic 
+          profile and share your success.</p>
+      </article>
+</section>
+</div>
+
+</body>
+</html>
