--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -28,6 +28,28 @@
     </nav>
 
   </header>
+  <main>
+    <div id="left">
+      Tube Bending
+      <button class="main">Learn More</button>
+    </div>
+    <div id="right">
+      <ul class="numbers">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+      </ul>
+    </div>
+  </main>
+  <article>
+      <div id="greymiddle">
+          <p class="greymiddle">Your One Stop - Turn Key - Laser and Fabrication Facility</p>
+          <button class="greymiddle">Request a Quote</button>
+        </div>
+  </article>
   
 </body>
 </html>
