red border in welcome to our site

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -51,6 +51,7 @@
         </div>
   </article>
   <section>
+    <!---These are labled incorrectly --->
       <div class="tab">
           <button class="tablinks" onclick="openCity(event, 'London')">Value Added Services</button>
           <button class="tablinks" onclick="openCity(event, 'Paris')">Projects</button>
