--- a/04week/tomorrows-technology/index.html
+++ b/04week/tomorrows-technology/index.html
@@ -8,6 +8,15 @@
   <title>Tomorrow's Technology</title>
 </head>
 <body>
+  <aside>
+    <h1 class="aside"> TOP STORIES</h1>
+    <ul class="aside">
+      <li class="aside">Standford Researchers Make Artificial Skin That Senses Touch</li>
+      <li class="aside">3 New Ways to Wear Your Favorite Chambray Shirt</li>
+      <li class="aside">Where To Buy Your Next Rug</li>
+      <li class="aside">Chukkas That Offer Casual, Comfortable Style</li>
+    </ul>
+  </aside>
   <header>
     <img src="./img/bg.jpg" alt="Welcome" class="head">
     <p class="head">Tomorrow's Technology
