Final tic tac toe

--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
   <div class="row">
-    <div id="_0" class="square win1" data-cell="0"></div>
-    <div id="_1" class="square win1" data-cell="1"></div>
-    <div id="_2" class="square win1" data-cell="2"></div>
+    <div id="_0" class="square" data-cell="0"></div>
+    <div id="_1" class="square" data-cell="1"></div>
+    <div id="_2" class="square" data-cell="2"></div>
   </div>
   <div class="row">
-    <div id="_3" class="square win2" data-cell="3"></div>
-    <div id="_4" class="square win2" data-cell="4"></div>
-    <div id="_5" class="square win2" data-cell="5"></div>
+    <div id="_3" class="square" data-cell="3"></div>
+    <div id="_4" class="square" data-cell="4"></div>
+    <div id="_5" class="square" data-cell="5"></div>
   </div>
   <div class="row">
-    <div id="_6" class="square win3" data-cell="6"></div>
-    <div id="_7" class="square win3" data-cell="7"></div>
-    <div id="_8" class="square win3" data-cell="8"></div>
+    <div id="_6" class="square" data-cell="6"></div>
+    <div id="_7" class="square" data-cell="7"></div>
+    <div id="_8" class="square" data-cell="8"></div>
   </div>
   <div id="announce-winner"></div>
   <button id="clear">Clear Board</button>
