--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -4,22 +4,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
   <div class="row">
-    <div data-cell="0"></div>
-    <div data-cell="1"></div>
-    <div data-cell="2"></div>
+    <div id="0"></div>
+    <div id="1"></div>
+    <div id="2"></div>
   </div>
   <div class="row">
-    <div data-cell="3"></div>
-    <div data-cell="4"></div>
-    <div data-cell="5"></div>
+    <div id="3"></div>
+    <div id="4"></div>
+    <div id="5"></div>
   </div>
   <div class="row">
-    <div data-cell="6"></div>
-    <div data-cell="7"></div>
-    <div data-cell="8"></div>
+    <div id="6"></div>
+    <div id="7"></div>
+    <div id="8"></div>
   </div>
   <div id="announce-winner"></div>
   <button id="clear">Clear Board</button>
