Tic tac toe - couild not get it to work

--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -6,20 +6,22 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="row">
-    <div data-cell="0"></div>
-    <div data-cell="1"></div>
-    <div data-cell="2"></div>
-  </div>
-  <div class="row">
-    <div data-cell="3"></div>
-    <div data-cell="4"></div>
-    <div data-cell="5"></div>
-  </div>
-  <div class="row">
-    <div data-cell="6"></div>
-    <div data-cell="7"></div>
-    <div data-cell="8"></div>
+  <div id='board'><
+    <div class="row">
+      <div data-cell="0"></div>
+      <div data-cell="1"></div>
+      <div data-cell="2"></div>
+    </div>
+    <div class="row">
+      <div data-cell="3"></div>
+      <div data-cell="4"></div>
+      <div data-cell="5"></div>
+    </div>
+    <div class="row">
+      <div data-cell="6"></div>
+      <div data-cell="7"></div>
+      <div data-cell="8"></div>
+    </div>
   </div>
   <div id="announce-winner"></div>
   <button id="clear">Clear Board</button>
