--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -27,14 +27,14 @@
                     </div>
                     <div class="box left" id="education">
                         <h2 class="box">Education</h2>
-                        <p><i class="fa fa-laptop"></i><span> Austin Coding Academy</span> | October 2018 - July 2019</p>
+                        <p><i class="fa fa-laptop fa-10x"></i><span> Austin Coding Academy</span> | October 2018 - July 2019</p>
                         <p><i class="fa fa-graduation-cap"></i><span> Maryville University of St.Louis</span> | Gradutated 2014</p>
                         <p> B.A. Criminal Justice</p>
                     </div>
                     <div class="box right" id="work">
                         <h2>Work Experience</h2> 
-                        <div class="mcm_law">
-                            <p class="employer box">MCM Law, St. Louis, MO | September 2017 - September 2018</p>
+                        <div class="mcm_law ">
+                            <p class="employer box"><i class="fa fa-balance-scale"></i> MCM Law, St. Louis, MO | September 2017 - September 2018</p>
                             <p class="position">Legal Assitant | 2017 - 2018</p>
                             <p>The right hand man to the head attorney of the firm.  Proofread legal documents to make sure there were no mistakes.  During tax season, helped prepare tax returns and get the correct documents from the clients.  Prepared legal documents.  Was often times a middle man between the client and the attorney.  Run day to day operations of the office.</p>
                             <ul class="box work_list">
@@ -46,7 +46,7 @@
                             </ul>
                         </div>
                         <div class="TQL box">
-                            <p class="box employer">Total Qualityu Logistics, St. Louis, MO | Septepmber 2016 - September 2017</p>
+                            <p class="box employer"><i class="fa fa-truck"></i> Total Qualityu Logistics, St. Louis, MO | Septepmber 2016 - September 2017</p>
                             <p class="box position">Account Executive | 2016 - 2017</p>
                             <p>Manage the shipping and receiving of businesses nationwide.  Call prospects and cycle through the sales cycle to qualify, assess and close customers. Work to uncover prospects and customers’ needs to develop solutions to ensure needs were met.  Schedule trucks to pick up and deliver product within specified time frame. Act as person liaison between customers and carriers.</p>
                             <ul class= "box work_list">
@@ -57,7 +57,7 @@
                             </ul>
                         </div>
                         <div class="deweys box">
-                            <p class="employer box">Dewey's Pizza, St. Louis, MO | June 2010 - September 2016</p>
+                            <p class="employer box"><i class="fa fa-spoon"></i> Dewey's Pizza, St. Louis, MO | June 2010 - September 2016</p>
                             <p class= "position box">Kitchen Manager | 2014-2016</p>
                             <p>Manage kitchen operations for two fast-paced, dine-in/carry-out gourmet pizza restaurants, each seating 50+ guests and together generating $1 million in annual sales volume. Monitor inventory levels; order food and supplies. Schedule and supervise 8 team members engaged in food preparation, dishwashing and shift organization activities. <br> Assure appropriate staffing and adherence to sanitation, safety, portion control, loss prevention and productivity standards. Expedite food production to enhance customer service and satisfaction. As indicated, arrange equipment preventive maintenance and repair.</p>
                             <ul class="box work_list">
