revised responsive-card

--- a/05week/in-class-exercises/responsive-card/inclass.html
+++ b/05week/in-class-exercises/responsive-card/inclass.html
@@ -1,23 +1,24 @@
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Nunito|Titillium+Web" rel="stylesheet">
-  <title>Responsive Card</title>
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Seasonal Cocktails</title>
 </head>
 <body>
-  <div class="card border-1">
- <div class="card__content border-2">
-   <div class="subtitle border-1">Tipsy the Season</div>
-    <div class="title border-1">Seasonal Cocktails</div>
-    <div class="description border-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam dolore facere velit sunt est aspernatur accusantium molestiae, sequi quod harum eligendi nobis earum quas dolores laborum tempore asperiores magni nihil?</div>
-   <div class="link border-1">
-     <a href="#">Get the recipe</a>
+  <div class="gridContainer">
+    <div class="topImg">
+      <img src="https://source.unsplash.com/random/600x480/?v1" alt="">
     </div>
-   </div>
-  <div class="card__image border-2"></div>
- </div>
+    <div class="bottomTxt">
+      <h6>This is the Season</h6>
+      <h1>Seasonal Cocktails</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, est facere expedita dicta aliquid hic. Quia aperiam laudantium dolorem placeat quasi vitae. Tempore ea itaque perferendis cupiditate iusto aut in.
+      </p>
+      <h6>Get the Recipe</h6>
+    </div>
+  </div>
 </body>
 </html>
