--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,32 @@
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Travel Gram</title>
+</head>
+<body>
+  <div id="gridcontainer">
+    <div class="grid" border1">
+      <div id="container1">
+        <img src="https://www.hindustantimes.com/rf/image_size_960x540/HT/p2/2018/06/03/Pictures/young-females-indoor-water-aerobics-class-swimming_d9a8c5ba-6715-11e8-b4a9-2154dcd09999.jpg" alt="" class="border1">
+        <p class="border1">
+            1.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+        </p>
+      </div>
+    </div>
+    <div class="grid" border2">
+      <div id="container2">
+        <img src="https://currumbinsanctuary.com.au/application/files/9415/0301/9296/banner-animals-mobile.jpg" alt="Bird Image" class="border2">
+        <p class="border2">
+            Lorem ipsum dolor amet umami vegan crucifix plaid tote bag sustainable brunch fingerstache DIY occupy photo booth. Glossier hot chicken tousled, microdosing
+        </p>
+      </div>
+    </div>
+    <div class="grid" border3">3</div>
+    <div class="grid" border4">4</div>
+    <div class="grid" border5">5</div>
+  </div>
+</body>
+</html>
