removed '>' that was extra

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -15,7 +15,7 @@
     </div>
     <div data-stack="2">
     </div>
-    <div data-stack="3" id="target"></div>>
+    <div data-stack="3" id="target"></div>
     </div>
   </div>
   <button id="reset">Reset Board</button>
