Towers of Hanoi

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -6,7 +6,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class='container'>
   <div data-stack="1">
+    <div data-block="200"></div>
+    <div data-block="175"></div>
+    <div data-block="150"></div>
+    <div data-block="125"></div>
     <div data-block="100"></div>
     <div data-block="75"></div>
     <div data-block="50"></div>
@@ -15,6 +20,7 @@
   <div data-stack="2">
   </div>
   <div data-stack="3">
+  </div>
   </div>
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
