Final Towers of Hanoi

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -14,7 +14,7 @@
   </div>
   <div data-stack="2">
   </div>
-  <div data-stack="3">
+  <div id="stack3" data-stack="3">
   </div>
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
