--- a/checkpoint-two/pages/contact.html
+++ b/checkpoint-two/pages/contact.html
@@ -30,7 +30,33 @@
                 <a href="https://github.com/jschaef80" target="_blank">jschaef80</a><br><br>
 
                 <strong>LinkedIn</strong><br>
-                <a href="https://www.linkedin.com/in/jschaef80/" target="_blank">Jim Schaefer</a>
+                <a href="https://www.linkedin.com/in/jschaef80/" target="_blank">Jim Schaefer</a><br><br>
+
+                <strong>Forms Demonstration</strong>
+                <form>
+                    <input type="url" name="url" placeholder="URL Here"><br>
+                    <input type="email" name="email" placeholder="Email Here"><br>
+                    <input type="password" name="password" placeholder="password"><br>
+                    <input type="submit"><br><br>
+
+                    Please select all ingredients needed to make a peanut butter and jelly sandwhich:<br>
+                    <input type="checkbox" name="bread" value="bread">Bread<br>
+                    <input type="checkbox" name="peanutbutter" value="peanutbutter">Peanut Butter<br>
+                    <input type="checkbox" name="jelly" value="jelly">Jelly<br>
+                    <input type="checkbox" name="potato" value="potato">Potato<br><br>
+
+                    Which animal makes the best pet?<br>
+                    <input type="radio" name="pet" value="cat">Cat<br>
+                    <input type="radio" name="pet" value="rock">A rock<br>
+                    <input type="radio" name="pet" value="alligator">Alligator<br><br>
+
+                    How many licks does it actually take to get to the center of a Tootsie Pop?<br>
+                    1  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">  100
+
+
+                </form>
+
+
             </div>
     </main>
 </body>
